# mkdocs-calendar-plugin

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml
mkdocs_calendar/: plugin.py
test/simple/: mkdocs.yml
test/simple/docs/: index.md
