[tool.poetry]
name = "mkdocs-calendar-plugin"
version = "0.4.1"
description = "An MkDocs plugin to expose calendar information to the 'extra' configuration variable."
authors = ["Jacques Supcik <jacques.supcik@hefr.ch>"]
repository = "https://github.com/supcik/mkdocs-calendar-plugin"
license = "Apache-2"
readme = "README.md"
packages = [{ include = "mkdocs_calendar" }]
keywords = ["mkdocs", "python", "markdown", "wiki"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology"
]
exclude = ["test"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
mkdocs-material = { version = "^9.4.2", optional = true }
mkdocs-macros-plugin = { version = "^1.0.4", optional = true }
pytz = "^2023.3.post1"
dateparser = "^1.1.8"

[tool.poetry.extras]
test = ["mkdocs-material", "mkdocs-macros-plugin"]

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pylint = "^2.17.7"
isort = "^5.12.0"
pre-commit = "^3.4.0"
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]

[tool.poetry.plugins."mkdocs.plugins"]
calendar = "mkdocs_calendar.plugin:CalendarPlugin"

[tool.ruff]
select = ["E", "F", "B", "Q", "N", "I", "UP", "PL", "RUF", "C90"]
