[tool.poetry]
name = "mkdocs-calendar-plugin"
version = "0.4.4"
description = "An MkDocs plugin to expose calendar information to the 'extra' configuration variable."
authors = ["Jacques Supcik <jacques.supcik@hefr.ch>"]
repository = "https://github.com/supcik/mkdocs-calendar-plugin"
license = "Apache-2"
readme = "README.md"
packages = [{ include = "mkdocs_calendar" }]
keywords = ["mkdocs", "python", "markdown", "wiki"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology"
]
exclude = ["test"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
mkdocs-material = { version = "^9.5.9", optional = true }
mkdocs-macros-plugin = { version = "^1.0.5", optional = true }
pytz = "^2025.1"
dateparser = "^1.2.0"

[tool.poetry.extras]
test = ["mkdocs-material", "mkdocs-macros-plugin"]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.0.3"
isort = "^6.0.0"
pre-commit = "^4.1.0"
ruff = "^0.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]

[tool.poetry.plugins."mkdocs.plugins"]
calendar = "mkdocs_calendar.plugin:CalendarPlugin"

[tool.ruff]
select = ["E", "F", "B", "Q", "N", "I", "UP", "PL", "RUF", "C90"]
